GVN-349: UI layout bug due to large number of votes, font size is now changed and when the number is more than 30 characters, the number on newlines is adjusted.

--- a/app/src/components/YourInfo.less
+++ b/app/src/components/YourInfo.less
@@ -1,5 +1,16 @@
 @import "~@jet-lab/jet-antd/lib/jet-antd.less";
+:root{
+  --min-fs: 1;
+  --max-fs: 1.5;
+  --min-vw: 20;
+  --max-vw: 45;
 
+  --min-fs-rem: var(--min-fs) * 1rem;
+  --max-fs-rem: var(--max-fs) * 1rem;
+  --min-vw-rem: var(--min-vw) * 1rem;
+
+  --slope: (var(--max-fs) - var(--min-fs)) * (100vw - var(--min-vw-rem)) / (var(--max-vw) - var(--min-vw));
+}
 .title-info {
   font-size: @sm-font-size;
   line-height: 18px;
@@ -31,7 +42,35 @@
   padding-top: 23px;
   line-height: 35px;
   font-size: 68px;
+  max-width: 216px;
+  overflow: hidden;
 }
+
+.resize-font-size-more-than-7-char{
+  font-size: clamp(1rem, -0.875rem + 8.333vw, 2.8rem);
+}
+
+.resize-font-size-more-than-9-char{
+  font-size: clamp(1rem, -0.875rem + 8.333vw, 2.2rem);
+}
+
+.resize-font-size-more-than-13-char{
+  font-size: clamp(1rem, -0.875rem + 8.333vw, 1.5rem);
+}
+
+.resize-font-size-more-than-16-char{
+  font-size: clamp(1rem, -0.875rem + 8.333vw, 1.1rem);
+}
+
+.resize-font-size-more-than-22-char{
+  font-size: clamp(0.5rem, 0.5rem + 0.5vw, 0.79rem);
+}
+
+.resize-font-size-more-than-30-char{
+  font-size: clamp(0.5rem, 0.5rem + 0.5vw, 0.79rem);
+  overflow-wrap: break-word;
+}
+
 .action-btn-info {
   padding: 7px 20px;
   font-size: @sm-font-size;
